New converter: simple program works